[metadata]
name = logslice
version = 0.1.0
author = logslice contributors
description = Fast log file parser that extracts and filters structured log entries by time range or field patterns
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: System :: Logging
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    logslice = logslice.cli:main

[options.extras_require]
dev =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
